gccida/c2/init_builtins
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/cppinit.c:1182:22: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  init_builtins( cpp_reader_0 *pfile) 
                     ^~~~~~~~~~~~
                     cpp_reader
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/cppinit.c:1185:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *v2; // rax 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/cppinit.c:1231:41: error: use of undeclared identifier 'off_65A430'
while ( v1 < ( const  struct builtin *)&off_65A430 ); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/cppinit.c:1249:31: error: use of undeclared identifier 'off_65A450'
cpp_define_builtin( pfile, ( &off_65A450)[v10]); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_builtins/src/obj/cppinit.o] Error 1
